# nand2tetris

./: .gitignore  Cargo.toml  temp.asm
archive/vm-translator-proto/src/: main.rs  vm.rs
crates/hack-assembler/src/: lib.rs  main.rs
crates/jack/: Cargo.toml
crates/jack/src/: args.rs  code_gen.rs  main.rs  parser.rs  tokenizer.rs
crates/vmt/: Cargo.toml
crates/vmt/src/: args.rs  main.rs  opcode.rs  parser.rs  region.rs  writer.rs
crates/vmt/src/vm/: element.rs  mod.rs  opcode.rs  region.rs
projects/01/: And.hdl  DMux4Way.hdl  DMux8Way.hdl  Mux.hdl  Mux4Way16.hdl  Mux8Way16.hdl  Or.hdl  Or8Way.hdl  Xor.hdl
projects/02/: ALU.hdl  Add16.hdl  Add16Slow.hdl  Add4.hdl  FullAdder.hdl  Inc16.hdl
projects/03/a/: Bit.hdl  PC.hdl  RAM64.hdl  RAM8.hdl
projects/03/b/: RAM16K.hdl  RAM4K.hdl  RAM512.hdl
projects/04/fill/: Fill.asm  Fill.hack
projects/04/mult/: Mult.asm  Mult.hack
projects/05/: CPU.hdl  Computer.hdl  Memory.hdl
projects/06/hack-assembler/: Cargo.toml
projects/10/ArrayTest/: OMainT.xml
projects/11/Average/: Main.vm
projects/11/ComplexArrays/: Main.vm
projects/11/Pong/: Ball.vm  Bat.vm  PongGame.vm
projects/12/: Array.jack  Keyboard.jack  Math.jack  Memory.jack  Output.jack  Screen.jack  String.jack  Sys.jack
projects/12/ArrayTest/: Array.jack
projects/12/KeyboardTest/: Keyboard.jack  (+1 more)
projects/hack-assembler/: Cargo.toml
projects/vm-translator/: Cargo.toml
vm-translator/: Cargo.toml  rustfmt.toml
vm-translator/shared/: Cargo.toml
vm-translator/src/: main.rs  opts.rs  parsed_file.rs
vm-translator/vmt/: Cargo.toml
(+57 files in other folders)
